# tree-sitter-y86

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tree_sitter_y86/: __init__.py
src/: grammar.json  node-types.json  parser.c
